HCIDOCS-728: Updated OSC variables

--- a/_attributes/common-attributes.adoc
+++ b/_attributes/common-attributes.adoc
@@ -50,12 +50,9 @@ endif::[]
 :rh-storage: OpenShift Data Foundation
 :rh-rhacm-first: Red Hat Advanced Cluster Management (RHACM)
 :rh-rhacm: RHACM
-:rh-rhacm-version: 2.9
-:sandboxed-containers-first: OpenShift sandboxed containers
-:sandboxed-containers-operator: OpenShift sandboxed containers Operator
-:sandboxed-containers-version: 1.5
-:sandboxed-containers-version-z: 1.5.0
-:sandboxed-containers-legacy-version: 1.4.1
+:rh-rhacm-version: 2.13
+:osc: OpenShift sandboxed containers
+:osc-operator: OpenShift sandboxed containers Operator
 :cert-manager-operator: cert-manager Operator for Red Hat OpenShift
 :secondary-scheduler-operator-full: Secondary Scheduler Operator for Red Hat OpenShift
 :secondary-scheduler-operator: Secondary Scheduler Operator
